fix alignment and support user input of storecode

--- a/web/src/home/index.css
+++ b/web/src/home/index.css
@@ -2,21 +2,3 @@
   text-align: center;
   padding: 1rem;
 }
-
-.home-store-code {
-  position: relative;
-}
-
-.home-store-code::before {
-  content: 'https://honesty.store/';
-  font-size: 1.6rem;
-  position: absolute;
-  padding: 1rem;
-  padding-left: 0;
-  width: 50%;
-  text-align: right;
-}
-
-.home-store-code>input {
-  padding-left: 50%;
-}
